Fix geonames based online services after API change

Affects Wikipedia, weather, postal codes and earthquakes services.

BUG: 331004
FIXED-IN: 4.12.2
(cherry picked from commit 12a1f748dedb75b20ae9e1b1bb6020be0a4f3a2f)